# SubstitutionSolver

./: README.md  SubstitutionSolver.py  cipher.txt  plaintext.txt  pyproject.toml
