[project]
name = "assignment 1"
version = "0.1.0"
description = "Solution to assignment 1, to automatically perform frequency analysis on custom text and solve substitution ciphers."
authors = [
    {name = "James Power",email = "realjpower2002@gmail.com"}
]
readme = "README.md"
requires-python = "3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
